Fix invisible flex box

--- a/src/WebApp/Layout/MainLayout.razor.css
+++ b/src/WebApp/Layout/MainLayout.razor.css
@@ -13,10 +13,8 @@ main {
 }
 
 .top-row {
-    background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
+    justify-content: flex-start;
     display: flex;
     align-items: center;
 }
@@ -36,7 +34,7 @@ main {
         text-overflow: ellipsis;
     }
 
-@media (max-width: 640.98px) {
+@media (max-width: 641px) {
     .top-row {
         justify-content: space-between;
     }
