--- a/src/WebApp/Layout/NavMenu.razor.css
+++ b/src/WebApp/Layout/NavMenu.razor.css
@@ -25,20 +25,3 @@
     font-size: 32px;
     font-family: capture-it;
 }
-
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
-    
-    .nav-scrollable {
-        /* Allow sidebar to scroll for tall menus */
-        height: calc(100vh - 3.5rem);
-        overflow-y: auto;
-    }
-}
